# ImageSegmentor-pytorch

./: .gitignore  README.md  launch_train.sh
Docker/: Dockerfile  run_train.sh
scripts/: Dockerfile  Dockerfile.real  MLP.py  SoccerField_detector.ipynb  composite_label.py  inference_model.py  json_to_png.py  label2array.py  launch_train.sh  model.py  model_trace.py  test.py  trace_model.py  train.py
src/: CMakeLists.txt  Field-detect_test.cpp  field-detect_test.cpp
test_json/: 000051.json  000200.json  000270.json  000333.json  000435.json  000480.json  000540.json  000600.json  000650.json  000660.json  000670.json  000757.json
